--- a/html/index.html
+++ b/html/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <div><img src="../images/Reservia.svg" alt="logo Reservia" /></div>
-        <div>
+        <div id="actions">
             <nav>
                 <ul>
-                    <li><a href="#accomodations">Hébergements</a></li>
-                    <li><a href="#entertainments">Activités</a></li>
+                    <li><a href="#accomodations"><span>----</span>Hébergements<span>----</span></a></li>
+                    <li><a href="#entertainments"><span>----</span>Activités<span>----</span></a></li>
                 </ul>
             </nav>
-            <button type="button" disabled>S'inscrire</button>
+            <button type="button" id="sign_in" disabled>S'inscrire</button>
         </div>
     </header>
     <div id=home_search>
