css filtres et info

--- a/html/index.html
+++ b/html/index.html
@@ -37,25 +37,35 @@
         <div id="filters">
             <h3>Filtres</h3>
             <div class="filter">
-                <i class="fas fa-money-bill-wave"></i>
-                <p><strong>Économique</strong></p>
+                <div class="filter_icon_plus">
+                    <i class="fas fa-money-bill-wave" id="bill"></i>
+                </div>    
+                <p class="filter_text"><strong>Économique</strong></p>
             </div>
             <div class="filter">
-                <i class="fas fa-child"></i>
-                <p><strong>Familial</strong></p>
+                <div class="filter_icon_plus">
+                    <i class="fas fa-child" id="child"></i>
+                </div>    
+                <p class="filter_text"><strong>Familial</strong></p>
             </div>
             <div class="filter">
-                <i class="fas fa-heart"></i>
-                <p><strong>Romantique</strong></p>
+                <div class="filter_icon_plus">
+                    <i class="fas fa-heart" id="heart"></i>
+                </div>    
+                <p class="filter_text"><strong>Romantique</strong></p>
             </div>
             <div class="filter">
-                <i class="fas fa-dog"></i>
-                <p><strong>Animaux autorisés</strong></p>
+                <div class="filter_icon_plus">
+                    <i class="fas fa-dog" id="dog"></i>
+                </div>    
+                <p class="filter_text"><strong>Animaux autorisés</strong></p>
             </div>
         </div>
         <div id="info">
-            <i class="fas fa-info"></i>
-            <p><em>Plus de 500 logements sont disponibles dans cette ville</em></p>
+            <div id="info_icon_plus">
+                <i class="fas fa-info" id="icon_info"></i>
+            </div>
+            <p id="text_info"><em>Plus de 500 logements sont disponibles dans cette ville</em></p>
         </div>
     </div>
     <main>
