modif html et css, changement apparence filtres au survol

--- a/html/index.html
+++ b/html/index.html
@@ -36,30 +36,46 @@
         </div>
         <div id="filters">
             <h3>Filtres</h3>
-            <div class="filter">
-                <div class="filter_icon_plus">
-                    <i class="fas fa-money-bill-wave" id="bill"></i>
-                </div>    
-                <p class="filter_text"><strong>Économique</strong></p>
-            </div>
-            <div class="filter">
-                <div class="filter_icon_plus">
-                    <i class="fas fa-child" id="child"></i>
-                </div>    
-                <p class="filter_text"><strong>Familial</strong></p>
-            </div>
-            <div class="filter">
-                <div class="filter_icon_plus">
-                    <i class="fas fa-heart" id="heart"></i>
-                </div>    
-                <p class="filter_text"><strong>Romantique</strong></p>
-            </div>
-            <div class="filter">
-                <div class="filter_icon_plus">
-                    <i class="fas fa-dog" id="dog"></i>
-                </div>    
-                <p class="filter_text"><strong>Animaux autorisés</strong></p>
-            </div>
+            <div>
+                <a href="#" class="filter_link">
+                    <div class="filter">
+                        <div class="filter_icon_plus">
+                            <i class="fas fa-money-bill-wave" id="bill"></i>
+                        </div>    
+                        <p class="filter_text"><strong>Économique</strong></p>
+                    </div>    
+                </a>
+            </div>    
+            <div>
+                <a href="#" class="filter_link">
+                    <div class="filter">        
+                         <div class="filter_icon_plus">
+                             <i class="fas fa-child" id="child"></i>
+                         </div>    
+                        <p class="filter_text"><strong>Familial</strong></p>
+                    </div>   
+                </a>
+            </div>  
+            <div> 
+                <a href="#" class="filter_link">
+                    <div class="filter">
+                        <div class="filter_icon_plus">
+                            <i class="fas fa-heart" id="heart"></i>
+                        </div>    
+                        <p class="filter_text"><strong>Romantique</strong></p>
+                    </div>    
+                </a>
+            </div> 
+            <div>
+                <a href="#" class="filter_link">
+                    <div class="filter">
+                        <div class="filter_icon_plus">
+                            <i class="fas fa-dog" id="dog"></i>
+                        </div>    
+                        <p class="filter_text"><strong>Animaux autorisés</strong></p>
+                    </div>    
+                </a>
+            </div>    
         </div>
         <div id="info">
             <div id="info_icon_plus">
