contenu des six cartes hébergement

--- a/html/index.html
+++ b/html/index.html
@@ -90,58 +90,58 @@
                 <h2>Hébergements à Marseille</h2>
                 <div id="six_first_accomodation_results">
                     <article class="accomodation" id="accomodation_cannebiere">
-                        <h4>Auberge la Cannebière</h4>
-                        <p>Nuit à partir de <em>25€</em></p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="white_background">
+                            <h4>Auberge la Cannebière</h4>
+                            <p>Nuit à partir de <em class="price">25€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
                     </article>
                     <article class="accomodation" id="accomodation_port">
-                        <h4>Hôtel du Port</h4>
-                        <p>Nuit à partir de <em>52€</em></p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="white_background">
+                            <h4>Hôtel du Port</h4>
+                            <p>Nuit à partir de <em class="price">52€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
                     </article>
                     <article class="accomodation" id="accomodation_mouettes">
-                        <h4>Hôtel les Mouettes</h4>
-                        <p>Nuit à partir de <em>76€</em></p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="white_background">
+                            <h4>Hôtel les Mouettes</h4>
+                            <p>Nuit à partir de <em class="price">76€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
                     </article>
                     <article class="accomodation" id="accomodation_mer">
-                        <h4>Hôtel de la Mer</h4>
-                        <p>Nuit à partir de <em>48€</em></p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="white_background">
+                            <h4>Hôtel de la Mer</h4>
+                            <p>Nuit à partir de <em class="price">48€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
                     </article>
                     <article class="accomodation" id="accomodation_panier">
-                        <h4>Auberge le Panier</h4>
-                        <p>Nuit à partir de <em>23€</em></p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="white_background">
+                            <h4>Auberge le Panier</h4>
+                            <p>Nuit à partir de <em class="price">23€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
                     </article>
                     <article class="accomodation" id="accomodation_amina">
-                        <h4>Hôtel chez Amina</h4>
-                        <p>Nuit à partir de <em>96€</em></p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="white_background">
+                            <h4>Hôtel chez Amina</h4>
+                            <p>Nuit à partir de <em class="price">96€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
                     </article>
                 </div>
                 <button type="button" disabled>Afficher plus</button>
@@ -153,30 +153,24 @@
                 </div>
                 <article class="popular" id="pop_soleil">
                     <h4>Hôtel le soleil du matin</h4>
-                    <p>Nuit à partir de <em>128€</em></p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <p>Nuit à partir de <em class="price">128€</em></p>
+                    <div>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
                 </article>
                 <article class="popular" id="pop_coeur">
                     <h4>Au coeur de l'eau chambres d'hôtes</h4>
-                    <p>Nuit à partir de <em>71€</em></p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <p>Nuit à partir de <em class="price">71€</em></p>
+                    <div>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
                 </article>
                 <article class="popular" id="pop_bleu">
                     <h4>Hôtel tout bleu et blanc</h4>
-                    <p>Nuit à partir de <em>68€</em></p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <p>Nuit à partir de <em class="price">68€</em></p>
+                    <div>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
                 </article>
             </aside>
         </section>
