css disposition des six cartes hébergement ; ajustements divers notamment pour adaptation avec chrome

--- a/html/index.html
+++ b/html/index.html
@@ -94,7 +94,7 @@
                             <h4>Auberge la Cannebière</h4>
                             <p>Nuit à partir de <em class="price">25€</em></p>
                             <div>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
                             </div>
                         </div>    
                     </article>
@@ -112,7 +112,7 @@
                             <h4>Hôtel les Mouettes</h4>
                             <p>Nuit à partir de <em class="price">76€</em></p>
                             <div>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
                             </div>
                         </div>    
                     </article>
@@ -121,7 +121,7 @@
                             <h4>Hôtel de la Mer</h4>
                             <p>Nuit à partir de <em class="price">48€</em></p>
                             <div>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i><i class="fas fa-star grey_star"></i>
                             </div>
                         </div>    
                     </article>
@@ -130,7 +130,7 @@
                             <h4>Auberge le Panier</h4>
                             <p>Nuit à partir de <em class="price">23€</em></p>
                             <div>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
                             </div>
                         </div>    
                     </article>
@@ -144,7 +144,7 @@
                         </div>    
                     </article>
                 </div>
-                <button type="button" disabled>Afficher plus</button>
+                <button type="button" disabled id="show_more_button">Afficher plus</button>
             </div>
             <aside>
                 <div id="most_pop_title">
