--- a/html/index.html
+++ b/html/index.html
@@ -90,7 +90,7 @@
                 <h2>Hébergements à Marseille</h2>
                 <div id="six_first_accomodation_results">
                     <article class="accomodation" id="accomodation_cannebiere">
-                        <div class="white_background">
+                        <div class="acc_white_background">
                             <h4>Auberge la Cannebière</h4>
                             <p>Nuit à partir de <em class="price">25€</em></p>
                             <div>
@@ -99,7 +99,7 @@
                         </div>    
                     </article>
                     <article class="accomodation" id="accomodation_port">
-                        <div class="white_background">
+                        <div class="acc_white_background">
                             <h4>Hôtel du Port</h4>
                             <p>Nuit à partir de <em class="price">52€</em></p>
                             <div>
@@ -108,7 +108,7 @@
                         </div>    
                     </article>
                     <article class="accomodation" id="accomodation_mouettes">
-                        <div class="white_background">
+                        <div class="acc_white_background">
                             <h4>Hôtel les Mouettes</h4>
                             <p>Nuit à partir de <em class="price">76€</em></p>
                             <div>
@@ -117,7 +117,7 @@
                         </div>    
                     </article>
                     <article class="accomodation" id="accomodation_mer">
-                        <div class="white_background">
+                        <div class="acc_white_background">
                             <h4>Hôtel de la Mer</h4>
                             <p>Nuit à partir de <em class="price">48€</em></p>
                             <div>
@@ -126,7 +126,7 @@
                         </div>    
                     </article>
                     <article class="accomodation" id="accomodation_panier">
-                        <div class="white_background">
+                        <div class="acc_white_background">
                             <h4>Auberge le Panier</h4>
                             <p>Nuit à partir de <em class="price">23€</em></p>
                             <div>
@@ -135,7 +135,7 @@
                         </div>    
                     </article>
                     <article class="accomodation" id="accomodation_amina">
-                        <div class="white_background">
+                        <div class="acc_white_background">
                             <h4>Hôtel chez Amina</h4>
                             <p>Nuit à partir de <em class="price">96€</em></p>
                             <div>
@@ -147,31 +147,41 @@
                 <button type="button" disabled id="show_more_button">Afficher plus</button>
             </div>
             <aside>
-                <div id="most_pop_title">
+                <div id="most_popular_title">
                     <h3>Les plus populaires</h3>
-                    <i class="fas fa-chart-line"></i>
+                    <div>
+                        <i class="fas fa-chart-line"></i>
+                    </div>    
                 </div>
-                <article class="popular" id="pop_soleil">
-                    <h4>Hôtel le soleil du matin</h4>
-                    <p>Nuit à partir de <em class="price">128€</em></p>
-                    <div>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                    </div>
-                </article>
-                <article class="popular" id="pop_coeur">
-                    <h4>Au coeur de l'eau chambres d'hôtes</h4>
-                    <p>Nuit à partir de <em class="price">71€</em></p>
-                    <div>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                    </div>
-                </article>
-                <article class="popular" id="pop_bleu">
-                    <h4>Hôtel tout bleu et blanc</h4>
-                    <p>Nuit à partir de <em class="price">68€</em></p>
-                    <div>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                    </div>
-                </article>
+                <div id="three_first_popular">
+                    <article class="popular" id="pop_soleil">
+                        <div class="pop_white_background">
+                            <h4>Hôtel le soleil du <br>matin</h4>
+                            <p>Nuit à partir de <em class="price">128€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>    
+                    </article>
+                    <article class="popular" id="pop_coeur">
+                        <div class="pop_white_background">
+                            <h4>Au coeur de l'eau <br>chambres d'hôtes</h4>
+                            <p>Nuit à partir de <em class="price">71€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                            </div>
+                        </div>    
+                    </article>
+                    <article class="popular" id="pop_bleu">
+                        <div class="pop_white_background">
+                            <h4>Hôtel tout bleu et <br>blanc</h4>
+                            <p>Nuit à partir de <em class="price">68€</em></p>
+                            <div>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                            </div>
+                        </div>    
+                    </article>
+                </div>    
             </aside>
         </section>
         <section id="entertainments">
