--- a/html/index.html
+++ b/html/index.html
@@ -205,7 +205,7 @@
                     <article class="entertainment" id="entertain_garde">
                         <h4>Notre-Dame-de-la-Garde</h4>
                     </article>
-                    <article class="entertainment" id="entertain_logchamp">
+                    <article class="entertainment" id="entertain_longchamp">
                         <h4>Parc Longchamp</h4>
                     </article>
                 </div>    
