--- a/html/index.html
+++ b/html/index.html
@@ -90,60 +90,90 @@
                 <div id="accomodation_results">
                     <h2>Hébergements à Marseille</h2>
                     <div id="six_first_accomodation_results">
-                        <article class="accomodation" id="accomodation_cannebiere">
-                            <div class="acc_white_background">
-                                <h4>Auberge la Cannebière</h4>
-                                <p>Nuit à partir de <em class="price">25€</em></p>
+                        <a href="#">
+                            <article class="accomodation" id="accomodation_cannebiere">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    <img src="../images/accomodations/cannebiere.jpg" alt="photo d'illustration du logement"/>
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="accomodation" id="accomodation_port">
-                            <div class="acc_white_background">
-                                <h4>Hôtel du Port</h4>
-                                <p>Nuit à partir de <em class="price">52€</em></p>
+                                <div class="accomodation_content">
+                                    <h4>Auberge la Cannebière</h4>
+                                    <p>Nuit à partir de <em class="price">25€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    </div>
+                                </div>
+                            </article>  
+                        </a>
+                        <a href="#">
+                            <article class="accomodation" id="accomodation_port">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    <img src="../images/accomodations/port.jpg" alt="photo d'illustration du logement"/>
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="accomodation" id="accomodation_mouettes">
-                            <div class="acc_white_background">
-                                <h4>Hôtel les Mouettes</h4>
-                                <p>Nuit à partir de <em class="price">76€</em></p>
+                                <div class="accomodation_content">
+                                    <h4>Hôtel du Port</h4>
+                                    <p>Nuit à partir de <em class="price">52€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>    
+                        <a href="#">
+                            <article class="accomodation" id="accomodation_mouettes">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    <img src="../images/accomodations/mouettes.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="accomodation" id="accomodation_mer">
-                            <div class="acc_white_background">
-                                <h4>Hôtel de la Mer</h4>
-                                <p>Nuit à partir de <em class="price">48€</em></p>
+                                <div class="accomodation_content">
+                                    <h4>Hôtel les Mouettes</h4>
+                                    <p>Nuit à partir de <em class="price">76€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>  
+                        <a href="#">
+                            <article class="accomodation" id="accomodation_mer">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i><i class="fas fa-star grey_star"></i>
+                                    <img src="../images/accomodations/mer.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="accomodation" id="accomodation_panier">
-                            <div class="acc_white_background">
-                                <h4>Auberge le Panier</h4>
-                                <p>Nuit à partir de <em class="price">23€</em></p>
+                                <div class="accomodation_content">
+                                    <h4>Hôtel de la Mer</h4>
+                                    <p>Nuit à partir de <em class="price">48€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i><i class="fas fa-star grey_star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a> 
+                        <a href="#">   
+                            <article class="accomodation" id="accomodation_panier">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    <img src="../images/accomodations/panier.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="accomodation" id="accomodation_amina">
-                            <div class="acc_white_background">
-                                <h4>Hôtel chez Amina</h4>
-                                <p>Nuit à partir de <em class="price">96€</em></p>
+                                <div class="accomodation_content">
+                                    <h4>Auberge le Panier</h4>
+                                    <p>Nuit à partir de <em class="price">23€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>
+                        <a href="#">  
+                            <article class="accomodation" id="accomodation_amina">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    <img src="../images/accomodations/amina.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
+                                <div class="accomodation_content">
+                                    <h4>Hôtel chez Amina</h4>
+                                    <p>Nuit à partir de <em class="price">96€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>  
                     </div>
                     <button type="button" disabled id="show_more_button">Afficher plus</button>
                 </div>
@@ -155,60 +185,93 @@
                         </div>    
                     </div>
                     <div id="three_first_popular">
-                        <article class="popular" id="pop_soleil">
-                            <div class="pop_white_background">
-                                <h4>Hôtel le soleil du <br>matin</h4>
-                                <p>Nuit à partir de <em class="price">128€</em></p>
+                        <a href="#">
+                            <article class="popular" id="pop_soleil">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    <img src="../images/accomodations/soleil_matin.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="popular" id="pop_coeur">
-                            <div class="pop_white_background">
-                                <h4>Au coeur de l'eau <br>chambres d'hôtes</h4>
-                                <p>Nuit à partir de <em class="price">71€</em></p>
+                                <div class="popular_content">
+                                    <h4>Hôtel le soleil du <br>matin</h4>
+                                    <p>Nuit à partir de <em class="price">128€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="popular" id="pop_coeur">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    <img src="../images/accomodations/coeur_eau.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
-                        <article class="popular" id="pop_bleu">
-                            <div class="pop_white_background">
-                                <h4>Hôtel tout bleu et <br>blanc</h4>
-                                <p>Nuit à partir de <em class="price">68€</em></p>
+                                <div class="popular_content">
+                                    <h4>Au coeur de l'eau <br>chambres d'hôtes</h4>
+                                    <p>Nuit à partir de <em class="price">71€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="popular" id="pop_bleu">
                                 <div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    <img src="../images/accomodations/bleu_blanc_m.jpg" alt="photo d'illustration du logement" />
                                 </div>
-                            </div>    
-                        </article>
+                                <div class="popular_content">
+                                    <h4>Hôtel tout bleu et <br>blanc</h4>
+                                    <p>Nuit à partir de <em class="price">68€</em></p>
+                                    <div>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey_star"></i>
+                                    </div>
+                                </div>    
+                            </article>
+                        </a>
                     </div>    
                 </aside>
             </section>
             <section id="entertainments">
                 <h2>Activités à Marseille</h2>
                 <div id="entertainment_results">
-                    <article class="entertainment" id="entertain_port">
-                        <h4>Vieux Port</h4>
-                    </article>
+                    <a href="#">
+                        <article class="entertainment" id="entertain_port">
+                            <img src="../images/entertainments/port.jpg" alt="photo du vieux port"/>
+                            <h4>Vieux Port</h4>
+                        </article>
+                    </a>
                     <div>
-                        <article class="entertainment" id="entertain_fort">
-                            <h4>Fort de Pomègues</h4>
-                        </article>
-                        <article class="entertainment" id="entertain_frioul">
-                            <h4>Îles du Frioul</h4>
-                        </article>
+                        <a href="#">
+                            <article class="entertainment" id="entertain_fort">
+                                <img src="../images/entertainments/fort_m.jpg" alt="photo du fort de Pomègues" />
+                                <h4>Fort de Pomègues</h4>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="entertainment" id="entertain_frioul">
+                                <img src="../images/entertainments/frioul.jpg" alt="photo des Îles du Frioul" />
+                                <h4>Îles du Frioul</h4>
+                            </article>
+                        </a>
                     </div>    
-                    <article class="entertainment" id="entertain_calanques">
-                        <h4>Parc national des Calanques</h4>
-                    </article>
+                    <a href="#">
+                        <article class="entertainment" id="entertain_calanques">
+                            <img src="../images/entertainments/calanques_m_corrigee.jpg" alt="photo des Calanques" />
+                            <h4>Parc national des Calanques</h4>
+                        </article>
+                    </a>
                     <div>
-                        <article class="entertainment" id="entertain_garde">
-                            <h4>Notre-Dame-de-la-Garde</h4>
-                        </article>
-                        <article class="entertainment" id="entertain_longchamp">
-                            <h4>Parc Longchamp</h4>
-                        </article>
+                        <a href="#">
+                            <article class="entertainment" id="entertain_garde">
+                                <img src="../images/entertainments/garde.jpg"alt="photo de Notre-Dame-de-la-Garde" />
+                                <h4>Notre-Dame-de-la-Garde</h4>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="entertainment" id="entertain_longchamp">
+                                <img src="../images/entertainments/longchamp.jpg" alt="photo du parc de Longchamp" />
+                                <h4>Parc Longchamp</h4>
+                            </article>
+                        </a>
                     </div>    
                 </div>
             </section>
