correc check validateur W3C (html 1 err, 1 alerte)

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -78,8 +78,9 @@
         </div>
         <main>
             <section id="accomodations">
+                <h2>Hébergements</h2>
                 <section id="accomodation_results">
-                    <h2>Hébergements à Marseille</h2>
+                    <h3>Hébergements à Marseille</h3>
                     <div id="accomodation_results_container">
                         <a href="#">
                             <article id="accomodation_cannebiere">
@@ -235,7 +236,7 @@
                     <div>
                         <a href="#">
                             <article id="entertain_garde">
-                                <img src="../images/entertainments/garde.jpg"alt="photo de Notre-Dame-de-la-Garde" />
+                                <img src="../images/entertainments/garde.jpg" alt="photo de Notre-Dame-de-la-Garde" />
                                 <h4>Notre-Dame-de-la-Garde</h4>
                             </article>
                         </a>
