optimisation code (suppressionde div)

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
                 <button type="button" disabled>S'inscrire</button>
             </div>
         </header>
-        <div id=home_search>
+        <section id=home_search>
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p id="subtitle">En plein centre ville ou en pleine nature</p>
             <div id="search_bar">
@@ -32,7 +32,7 @@
                     <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><input type="submit" value="Rechercher" id="search_button" />
                 </form>    
             </div>
-            <div id="filters">
+            <section id="filters">
                 <h3>Filtres</h3>
                 <ul>
                     <li>
@@ -68,14 +68,14 @@
                         </a>  
                     </li> 
                 </ul>   
-            </div>
-            <div id="info">
+            </section>
+            <section id="info">
                 <div>
                     <i class="fas fa-info"></i>
                 </div>
                 <p><em>Plus de 500 logements sont disponibles dans cette ville</em></p>
-            </div>
-        </div>
+            </section>
+        </section>
         <main>
             <section id="accomodations">
                 <h2>Hébergements</h2>
@@ -164,7 +164,7 @@
                             <i class="fas fa-chart-line"></i>
                         </div>    
                     </div>
-                    <div id="three_most_popular">
+                    <div id="popular_accomodation_container">
                         <a href="#">
                             <article id="pop_soleil">
                                 <img src="../images/accomodations/soleil_matin.jpg" alt="photo d'illustration du logement" />
@@ -206,7 +206,7 @@
             </section>
             <section id="entertainments">
                 <h2>Activités à Marseille</h2>
-                <div id="entertainment_results">
+                <div id="entertainments_container">
                     <a href="#">
                         <article id="entertain_port">
                             <img src="../images/entertainments/port.jpg" alt="photo du vieux port"/>
