--- a/html/index.html
+++ b/html/index.html
@@ -13,15 +13,13 @@
     <div id="container">
         <header>
             <img src="../images/Reservia.svg" alt="logo Reservia" />
-            <div>
-                <nav>
-                    <ul>
-                        <li><a href="#accomodations"><span>----</span>Hébergements<span>----</span></a></li>
-                        <li><a href="#entertainments"><span>----</span>Activités<span>----</span></a></li>
-                    </ul>
-                </nav>
-                <button type="button" disabled>S'inscrire</button>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="#accomodations"><span class="joker2">---------</span><span class="joker1">----</span>Hébergements<span class="joker1">----</span><span class="joker2">------</span></a></li> 
+                    <li><a href="#entertainments"><span class="joker2">------</span><span class="joker1">----</span>Activités<span class="joker1">----</span><span class="joker2">-----------</span></a></li>
+                </ul>
+            </nav>
+            <p><button type="button" disabled>S'inscrire</button></p>
         </header>
         <section id=home_search>
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -29,7 +27,7 @@
             <div id="search_bar">
                 <i class="fas fa-map-marker-alt"></i>
                 <form method="post" action="document.php">
-                    <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><input type="submit" value="Rechercher" id="search_button" />
+                    <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><input type="submit" value="Rechercher" id="search_button"/><a href="#" id="search_icon"><i class="fas fa-search"></i></a>
                 </form>    
             </div>
             <section id="filters">
