--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,8 @@
             <img src="../images/Reservia.svg" alt="logo Reservia" />
             <nav>
                 <ul>
-                    <li><a href="#accomodations"><span class="joker2">---------</span><span class="joker1">----</span>Hébergements<span class="joker1">----</span><span class="joker2">------</span></a></li> 
-                    <li><a href="#entertainments"><span class="joker2">------</span><span class="joker1">----</span>Activités<span class="joker1">----</span><span class="joker2">-----------</span></a></li>
+                    <li><a href="#accomodations"><span class="joker2">-----------</span><span class="joker1">----</span>Hébergements<span class="joker1">----</span><span class="joker2">----</span></a></li> 
+                    <li><a href="#entertainments"><span class="joker2">----</span><span class="joker1">----</span>Activités<span class="joker1">----</span><span class="joker2">-------------</span></a></li>
                 </ul>
             </nav>
             <p><button type="button" disabled>S'inscrire</button></p>
@@ -27,7 +27,8 @@
             <div id="search_bar">
                 <i class="fas fa-map-marker-alt"></i>
                 <form method="post" action="document.php">
-                    <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><input type="submit" value="Rechercher" id="search_button"/><a href="#" id="search_icon"><i class="fas fa-search"></i></a>
+                    <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><!--
+                    !--><button type="submit" id="search_button" disabled><span>Rechercher</span><i class="fas fa-search"></i></button> 
                 </form>    
             </div>
             <section id="filters">
