mise à jour nav header

--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,8 @@
             <img src="../images/Reservia.svg" alt="logo Reservia" />
             <nav>
                 <ul>
-                    <li><a href="#accomodations"><span class="joker2">-----------</span><span class="joker1">----</span>Hébergements<span class="joker1">----</span><span class="joker2">----</span></a></li> 
-                    <li><a href="#entertainments"><span class="joker2">----</span><span class="joker1">----</span>Activités<span class="joker1">----</span><span class="joker2">-------------</span></a></li>
+                    <li id="acc_link"><a href="#accomodations">Hébergements</a></li> 
+                    <li id="entert_link"><a href="#entertainments">Activités</a></li>
                 </ul>
             </nav>
             <p><button type="button" disabled>S'inscrire</button></p>
