corrections suite test validation W3C (1 w html)

--- a/html/index.html
+++ b/html/index.html
@@ -69,6 +69,7 @@
                 </ul>   
             </section>
             <section id="info">
+                <h3>Information</h3>
                 <div>
                     <i class="fas fa-info"></i>
                 </div>
