diverses retouches html et css et supp de fichiers

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/fontawesome/all.min.css">
-    <link rel="stylesheet" href="../css/fontawesome/fontawesome.min.css">
+
+    <!--Police personnalisée -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">   
+    
+    <!--Icones-->
+    <script src="https://kit.fontawesome.com/4c3e2d910f.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../images/Reservia.svg"> 
     <title>Reservia</title>
@@ -209,40 +215,40 @@
                 <div id="entertainments_container">
                     <a href="#">
                         <article id="entertain_port">
-                            <img src="../images/entertainments/port.jpg" alt="photo du vieux port"/>
+                            <img src="../images/entertainments/vieux_port.jpg" alt="photo du vieux port"/>
                             <h4>Vieux Port</h4>
                         </article>
                     </a>
                     <div>
                         <a href="#">
                             <article id="entertain_fort">
-                                <img src="../images/entertainments/fort_m.jpg" alt="photo du fort de Pomègues" />
+                                <img src="../images/entertainments/fort_pomegues.jpg" alt="photo du fort de Pomègues" />
                                 <h4>Fort de Pomègues</h4>
                             </article>
                         </a>
                         <a href="#">
                             <article id="entertain_frioul">
-                                <img src="../images/entertainments/frioul.jpg" alt="photo des Îles du Frioul" />
+                                <img src="../images/entertainments/iles_de_frioul.jpg" alt="photo des Îles du Frioul" />
                                 <h4>Îles du Frioul</h4>
                             </article>
                         </a>
                     </div>    
                     <a href="#">
                         <article id="entertain_calanques">
-                            <img src="../images/entertainments/calanques_m_corrigee.jpg" alt="photo des Calanques" />
+                            <img src="../images/entertainments/calanques.jpg" alt="photo des Calanques" />
                             <h4>Parc national des Calanques</h4>
                         </article>
                     </a>
                     <div>
                         <a href="#">
                             <article id="entertain_garde">
-                                <img src="../images/entertainments/garde.jpg" alt="photo de Notre-Dame-de-la-Garde" />
+                                <img src="../images/entertainments/notre-dame-de-la-garde.jpg" alt="photo de Notre-Dame-de-la-Garde" />
                                 <h4>Notre-Dame-de-la-Garde</h4>
                             </article>
                         </a>
                         <a href="#">
                             <article id="entertain_longchamp">
-                                <img src="../images/entertainments/longchamp.jpg" alt="photo du parc de Longchamp" />
+                                <img src="../images/entertainments/parc_longchamp.jpg" alt="photo du parc de Longchamp" />
                                 <h4>Parc Longchamp</h4>
                             </article>
                         </a>
